--- a/web/views/index.ejs
+++ b/web/views/index.ejs
@@ -1,7 +1,9 @@
 <!doctype html>
 <html>
 <head>
-    <title>Home</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Saltybox: Home</title>
 </head>
 <body>
     <h1>Hello World!</h1>
