Made edits to webserver

--- a/web/views/index.ejs
+++ b/web/views/index.ejs
@@ -14,7 +14,8 @@
     <div id="navbar">
         <ul id="navlinks">
             <li><a href="/">Home</a></li>
-            <li><a href="/data">Data</a></li>
+            <li><a href="/fighterdata">Fighter Data</a></li>
+            <li><a href="/matchdata">Match Data</a></li>
         </ul>
 </div>
 <div id="stream">
